# EditerJsonlData

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml
.security/: README.md
app/: main.py
app/api/: deps.py
app/core/: config.py  csrf.py  exceptions.py  logger.py  pending_tasks.py  rate_limit.py  security_headers.py
app/db/: duckdb_client.py  (+1 more)
docs/: 2026-02-12_development_report.md  2026-02-12_error_troubleshooting_report.md  2026-02-12_phase3_report.md  2026-02-13_phase4_report.md  2026-02-19_phase5_report.md  2026-03-11_phase6-1_report.md  2026-03-11_phase6_report.md  2026-03-11_phase7_report.md  2026-03-11_phase8_gcs_redis_edit.md  2026-03-12_phase9_ui_restructure.md  2026-03-13_bug_tracking_report.md  2026-03-13_phase10_duckdb_implementation_report.md  2026-03-13_phase10_duckdb_schema_design.md  2026-03-14_phase11_auth_implementation.md  2026-03-19_phase12_zipstream_download.md  2026-03-20_bugfix_report.md  2026-03-20_improvement_report.md  2026-03-23_bugfix_report.md  2026-03-23_deployment_scenario.md  2026-03-23_improvement_report.md  2026-03-25_bugfix_feature_report.md  2026-03-26_develop_task2_editor.md  2026-03-26_develop_task3_editor.md  2026-05-22_bug51_latex_fix_completion_report.md  2026-05-22_latex_render_breakage_analysis_and_fix_proposal.md  ADDITIONAL_CONSIDERATIONS.md  DEVELOPMENT_SPECIALIST.md  Gemini.md  PHASE_1_5_REPORT.md  PHASE_1_REPORT.md
nginx/: nginx-http-only.conf  nginx.conf
redis/: sentinel.conf
tests/: conftest.py
(+68 files in other folders)
