[project]
name = "editer-jsonl"
version = "0.1.0"
description = "Web-based JSONL Editor with Row-level Locking and High Availability"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "kanjanggun", email = "kanjanggun@gmail.com" }
]
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "gunicorn>=21.2.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "jinja2>=3.1.3",
    "redis>=5.0.1",
    "aiofiles>=23.2.1",
    "python-multipart>=0.0.9",
    "slowapi>=0.1.9",
    "fastapi-csrf-protect>=0.3.3",
    "httpx>=0.27.0",
    "psutil>=5.9.8",
    "google-cloud-storage>=2.14.0",
    "duckdb>=1.2.0",
    "pytz>=2024.1",
    "bcrypt>=4.1.0",
    "zipstream-ng>=1.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.5",
    "pytest-cov>=4.1.0",
    "fakeredis>=2.21.0",
    "ruff>=0.2.1",
    "black>=24.1.1",
    "bandit>=1.7.7",
    "playwright>=1.41.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]